[gd_scene load_steps=3 format=3 uid="uid://data_editor"]

[ext_resource type="Script" path="res://engine/editor/DataEditor.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.08, 0.08, 0.08, 1)

[node name="DataEditor" type="Panel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
mouse_filter = 2
theme_override_styles/panel = SubResource("1")
script = ExtResource("1")

[node name="Root" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
theme_override_constants/separation = 10

[node name="ScrollLeft" type="ScrollContainer" parent="Root"]
custom_minimum_size = Vector2(170, 0)
size_flags_vertical = 3
size_flags_horizontal = 3
horizontal_scroll_enabled = false
vertical_scroll_mode = 2

[node name="CategoriesBox" type="VBoxContainer" parent="Root/ScrollLeft"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="CategoriesLabel" type="Label" parent="Root/ScrollLeft/CategoriesBox"]
text = "Categories"

[node name="Categories" type="ItemList" parent="Root/ScrollLeft/CategoriesBox"]
custom_minimum_size = Vector2(140, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = false
select_mode = 1

[node name="ScrollAssets" type="ScrollContainer" parent="Root"]
custom_minimum_size = Vector2(220, 0)
size_flags_vertical = 3
size_flags_horizontal = 3
horizontal_scroll_enabled = false
vertical_scroll_mode = 2

[node name="AssetsBox" type="VBoxContainer" parent="Root/ScrollAssets"]
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 4

[node name="AssetsLabel" type="Label" parent="Root/ScrollAssets/AssetsBox"]
text = "Types"

[node name="Assets" type="ItemList" parent="Root/ScrollAssets/AssetsBox"]
custom_minimum_size = Vector2(220, 0)
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = false
select_mode = 1

[node name="PreviewBox" type="VBoxContainer" parent="Root/ScrollAssets/AssetsBox"]
theme_override_constants/separation = 4

[node name="PreviewLabel" type="Label" parent="Root/ScrollAssets/AssetsBox/PreviewBox"]
text = "Preview"

[node name="PreviewTexture" type="TextureRect" parent="Root/ScrollAssets/AssetsBox/PreviewBox"]
custom_minimum_size = Vector2(200, 200)
expand = true
stretch_mode = 2
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="Root/ScrollAssets/AssetsBox"]
theme_override_constants/separation = 8

[node name="New" type="Button" parent="Root/ScrollAssets/AssetsBox/Buttons"]
text = "New"

[node name="Save" type="Button" parent="Root/ScrollAssets/AssetsBox/Buttons"]
text = "Save"

[node name="Reload" type="Button" parent="Root/ScrollAssets/AssetsBox/Buttons"]
text = "Reload"

[node name="Delete" type="Button" parent="Root/ScrollAssets/AssetsBox/Buttons"]
text = "Delete"
theme_override_colors/font_color = Color(1, 0.2, 0.2, 1)

[node name="ScrollInspector" type="ScrollContainer" parent="Root"]
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_enabled = false
vertical_scroll_mode = 2

[node name="Inspector" type="VBoxContainer" parent="Root/ScrollInspector"]
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="PathLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Path"

[node name="Path" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
editable = false

[node name="IdLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Id"

[node name="Id" type="LineEdit" parent="Root/ScrollInspector/Inspector"]

[node name="TypeLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Type"

[node name="Type" type="OptionButton" parent="Root/ScrollInspector/Inspector"]

[node name="LifecycleLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Lifecycle"

[node name="Lifecycle" type="OptionButton" parent="Root/ScrollInspector/Inspector"]

[node name="TagsLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Tags (comma)"

[node name="Tags" type="LineEdit" parent="Root/ScrollInspector/Inspector"]

[node name="SceneLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Scene Path"

[node name="Scene" type="LineEdit" parent="Root/ScrollInspector/Inspector"]

[node name="SceneBrowse" type="Button" parent="Root/ScrollInspector/Inspector"]
text = "Browse Scene"

[node name="InputSourceLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Input Source"

[node name="InputSource" type="OptionButton" parent="Root/ScrollInspector/Inspector"]

[node name="PlayerRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="PlayerNumberLabel" type="Label" parent="Root/ScrollInspector/Inspector/PlayerRow"]
text = "Player #"

[node name="PlayerNumber" type="SpinBox" parent="Root/ScrollInspector/Inspector/PlayerRow"]
min_value = 1.0
max_value = 4.0
step = 1.0
value = 1.0

[node name="FactionLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Faction"

[node name="Faction" type="LineEdit" parent="Root/ScrollInspector/Inspector"]

[node name="HostilityLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Aggressiveness (-1 ally, 0 neutral, 1 enemy)"

[node name="Hostility" type="OptionButton" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(140, 0)

[node name="BehaviorLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Behavior Profile"

[node name="BehaviorRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="BehaviorProfile" type="LineEdit" parent="Root/ScrollInspector/Inspector/BehaviorRow"]

[node name="BehaviorLocate" type="Button" parent="Root/ScrollInspector/Inspector/BehaviorRow"]
text = "..."

[node name="BehaviorCreate" type="Button" parent="Root/ScrollInspector/Inspector/BehaviorRow"]
text = "+"

[node name="DialogueLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Dialogue Id"

[node name="DialogueRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="Dialogue" type="LineEdit" parent="Root/ScrollInspector/Inspector/DialogueRow"]

[node name="DialogueLocate" type="Button" parent="Root/ScrollInspector/Inspector/DialogueRow"]
text = "..."

[node name="DialogueCreate" type="Button" parent="Root/ScrollInspector/Inspector/DialogueRow"]
text = "+"

[node name="LootLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Loot Table"

[node name="LootRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="Loot" type="LineEdit" parent="Root/ScrollInspector/Inspector/LootRow"]

[node name="LootLocate" type="Button" parent="Root/ScrollInspector/Inspector/LootRow"]
text = "..."

[node name="LootCreate" type="Button" parent="Root/ScrollInspector/Inspector/LootRow"]
text = "+"

[node name="InventoryLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Inventory Template"

[node name="InventoryRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="Inventory" type="LineEdit" parent="Root/ScrollInspector/Inspector/InventoryRow"]

[node name="InventoryLocate" type="Button" parent="Root/ScrollInspector/Inspector/InventoryRow"]
text = "..."

[node name="InventoryCreate" type="Button" parent="Root/ScrollInspector/Inspector/InventoryRow"]
text = "+"

[node name="PatrolLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Patrol Path"

[node name="PatrolRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="Patrol" type="LineEdit" parent="Root/ScrollInspector/Inspector/PatrolRow"]

[node name="PatrolLocate" type="Button" parent="Root/ScrollInspector/Inspector/PatrolRow"]
text = "..."

[node name="PatrolCreate" type="Button" parent="Root/ScrollInspector/Inspector/PatrolRow"]
text = "+"

[node name="ScheduleLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Schedule Id"

[node name="ScheduleRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="Schedule" type="LineEdit" parent="Root/ScrollInspector/Inspector/ScheduleRow"]

[node name="ScheduleLocate" type="Button" parent="Root/ScrollInspector/Inspector/ScheduleRow"]
text = "..."

[node name="ScheduleCreate" type="Button" parent="Root/ScrollInspector/Inspector/ScheduleRow"]
text = "+"

[node name="SpawnLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Spawn Settings"

[node name="SpawnRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="SpawnRespawn" type="CheckBox" parent="Root/ScrollInspector/Inspector/SpawnRow"]
text = "Respawn"

[node name="SpawnUnique" type="CheckBox" parent="Root/ScrollInspector/Inspector/SpawnRow"]
text = "Unique"

[node name="SpawnPersistent" type="CheckBox" parent="Root/ScrollInspector/Inspector/SpawnRow"]
text = "Persistent"

[node name="SpawnRadiusLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Spawn Radius"

[node name="SpawnRadius" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(120, 0)

[node name="LevelRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="LevelLabel" type="Label" parent="Root/ScrollInspector/Inspector/LevelRow"]
text = "Level"

[node name="Level" type="LineEdit" parent="Root/ScrollInspector/Inspector/LevelRow"]
custom_minimum_size = Vector2(80, 0)

[node name="XPLabel" type="Label" parent="Root/ScrollInspector/Inspector/LevelRow"]
text = "XP"

[node name="XP" type="LineEdit" parent="Root/ScrollInspector/Inspector/LevelRow"]
custom_minimum_size = Vector2(80, 0)

[node name="StatsLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Stats"

[node name="HPRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="HPLabel" type="Label" parent="Root/ScrollInspector/Inspector/HPRow"]
custom_minimum_size = Vector2(60, 0)
text = "HP Max"

[node name="HP" type="LineEdit" parent="Root/ScrollInspector/Inspector/HPRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="MPRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="MPLabel" type="Label" parent="Root/ScrollInspector/Inspector/MPRow"]
custom_minimum_size = Vector2(60, 0)
text = "MP Max"

[node name="MP" type="LineEdit" parent="Root/ScrollInspector/Inspector/MPRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="StrengthRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="StrengthLabel" type="Label" parent="Root/ScrollInspector/Inspector/StrengthRow"]
custom_minimum_size = Vector2(60, 0)
text = "Str"

[node name="Strength" type="LineEdit" parent="Root/ScrollInspector/Inspector/StrengthRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="DefenseRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="DefenseLabel" type="Label" parent="Root/ScrollInspector/Inspector/DefenseRow"]
custom_minimum_size = Vector2(60, 0)
text = "Def"

[node name="Defense" type="LineEdit" parent="Root/ScrollInspector/Inspector/DefenseRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="AgilityRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="AgilityLabel" type="Label" parent="Root/ScrollInspector/Inspector/AgilityRow"]
custom_minimum_size = Vector2(60, 0)
text = "Agi"

[node name="Agility" type="LineEdit" parent="Root/ScrollInspector/Inspector/AgilityRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="IntelligenceRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="IntelligenceLabel" type="Label" parent="Root/ScrollInspector/Inspector/IntelligenceRow"]
custom_minimum_size = Vector2(60, 0)
text = "Int"

[node name="Intelligence" type="LineEdit" parent="Root/ScrollInspector/Inspector/IntelligenceRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="LuckRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="LuckLabel" type="Label" parent="Root/ScrollInspector/Inspector/LuckRow"]
custom_minimum_size = Vector2(60, 0)
text = "Luck"

[node name="Luck" type="LineEdit" parent="Root/ScrollInspector/Inspector/LuckRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElementLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Elemental"

[node name="ElemFireRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemFireLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemFireRow"]
custom_minimum_size = Vector2(80, 0)
text = "Fire"

[node name="ElemFire" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemFireRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemWaterRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemWaterLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemWaterRow"]
custom_minimum_size = Vector2(80, 0)
text = "Water"

[node name="ElemWater" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemWaterRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemEarthRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemEarthLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemEarthRow"]
custom_minimum_size = Vector2(80, 0)
text = "Earth"

[node name="ElemEarth" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemEarthRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemWindRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemWindLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemWindRow"]
custom_minimum_size = Vector2(80, 0)
text = "Wind"

[node name="ElemWind" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemWindRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemLightRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemLightLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemLightRow"]
custom_minimum_size = Vector2(80, 0)
text = "Light"

[node name="ElemLight" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemLightRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemDarkRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemDarkLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemDarkRow"]
custom_minimum_size = Vector2(80, 0)
text = "Dark"

[node name="ElemDark" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemDarkRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemThunderRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemThunderLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemThunderRow"]
custom_minimum_size = Vector2(80, 0)
text = "Thunder"

[node name="ElemThunder" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemThunderRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemGaeaRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemGaeaLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemGaeaRow"]
custom_minimum_size = Vector2(80, 0)
text = "Gaea"

[node name="ElemGaea" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemGaeaRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="ElemTimespaceRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="ElemTimespaceLabel" type="Label" parent="Root/ScrollInspector/Inspector/ElemTimespaceRow"]
custom_minimum_size = Vector2(80, 0)
text = "Timespace"

[node name="ElemTimespace" type="LineEdit" parent="Root/ScrollInspector/Inspector/ElemTimespaceRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="SkillLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Skills"

[node name="SkillAtkRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="SkillAtkLabel" type="Label" parent="Root/ScrollInspector/Inspector/SkillAtkRow"]
custom_minimum_size = Vector2(80, 0)
text = "Unarmed"

[node name="SkillAtk" type="LineEdit" parent="Root/ScrollInspector/Inspector/SkillAtkRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="SkillSupportRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="SkillSupportLabel" type="Label" parent="Root/ScrollInspector/Inspector/SkillSupportRow"]
custom_minimum_size = Vector2(80, 0)
text = "Armed"

[node name="SkillSupport" type="LineEdit" parent="Root/ScrollInspector/Inspector/SkillSupportRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="SkillSpecialRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="SkillSpecialLabel" type="Label" parent="Root/ScrollInspector/Inspector/SkillSpecialRow"]
custom_minimum_size = Vector2(80, 0)
text = "Ranged"

[node name="SkillSpecial" type="LineEdit" parent="Root/ScrollInspector/Inspector/SkillSpecialRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="SkillFinesseRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="SkillFinesseLabel" type="Label" parent="Root/ScrollInspector/Inspector/SkillFinesseRow"]
custom_minimum_size = Vector2(80, 0)
text = "Finesse"

[node name="SkillFinesse" type="LineEdit" parent="Root/ScrollInspector/Inspector/SkillFinesseRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="SkillStealthRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="SkillStealthLabel" type="Label" parent="Root/ScrollInspector/Inspector/SkillStealthRow"]
custom_minimum_size = Vector2(80, 0)
text = "Stealth"

[node name="SkillStealth" type="LineEdit" parent="Root/ScrollInspector/Inspector/SkillStealthRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "1"

[node name="AIStateLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "AI Initial State"

[node name="AIState" type="LineEdit" parent="Root/ScrollInspector/Inspector"]

[node name="AIParamsLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "AI Params (key=value;)"

[node name="AIParams" type="LineEdit" parent="Root/ScrollInspector/Inspector"]

[node name="CollisionLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Collision Layers / Mask"

[node name="CollisionRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 8

[node name="Layers" type="LineEdit" parent="Root/ScrollInspector/Inspector/CollisionRow"]
custom_minimum_size = Vector2(100, 0)

[node name="Mask" type="LineEdit" parent="Root/ScrollInspector/Inspector/CollisionRow"]
custom_minimum_size = Vector2(100, 0)

[node name="DynamicBox" type="VBoxContainer" parent="Root/ScrollInspector/Inspector"]
theme_override_constants/separation = 6

[node name="ItemLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Item Settings"

[node name="ItemSprite" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "sprite path"

[node name="ItemAmount" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "amount"

[node name="ItemAutoPickup" type="CheckBox" parent="Root/ScrollInspector/Inspector"]
text = "Auto Pickup"

[node name="ItemFloatIdle" type="CheckBox" parent="Root/ScrollInspector/Inspector"]
text = "Float Idle"

[node name="ItemSlots" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "slots_needed"

[node name="ItemMaxStack" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "max_stack"

[node name="ItemValue" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "value"

[node name="ItemEquipable" type="CheckBox" parent="Root/ScrollInspector/Inspector"]
text = "Equippable"

[node name="ItemEquipSlot" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "equip_slot"

[node name="ItemConsumable" type="CheckBox" parent="Root/ScrollInspector/Inspector"]
text = "Consumable"

[node name="ItemSubweapon" type="CheckBox" parent="Root/ScrollInspector/Inspector"]
text = "Subweapon"

[node name="ItemSubweaponId" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "subweapon_projectile_id"

[node name="PlatformLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Platform Settings"

[node name="PlatformName" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "Name"

[node name="PlatformType" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "platform_type"

[node name="PlatformSlope" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "slope_direction"

[node name="PlatformSpeed" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "speed"

[node name="PlatformPath" type="LineEdit" parent="Root/ScrollInspector/Inspector"]
custom_minimum_size = Vector2(200, 0)
placeholder_text = "movement_path_id"

[node name="PlatformAllowProjectile" type="CheckBox" parent="Root/ScrollInspector/Inspector"]
text = "Allow Projectile Collision"

[node name="SpawnerLabel" type="Label" parent="Root/ScrollInspector/Inspector"]
text = "Spawner Settings"

[node name="SpawnerBox" type="VBoxContainer" parent="Root/ScrollInspector/Inspector"]
visible = false
theme_override_constants/separation = 4

[node name="SpawnerSceneRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector/SpawnerBox"]

[node name="SpawnerSceneLabel" type="Label" parent="Root/ScrollInspector/Inspector/SpawnerBox/SpawnerSceneRow"]
text = "Spawn Scene"

[node name="SpawnerScene" type="LineEdit" parent="Root/ScrollInspector/Inspector/SpawnerBox/SpawnerSceneRow"]
custom_minimum_size = Vector2(140, 0)

[node name="SpawnerSceneBrowse" type="Button" parent="Root/ScrollInspector/Inspector/SpawnerBox/SpawnerSceneRow"]
text = "Browse"

[node name="SpawnerCountsRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector/SpawnerBox"]
theme_override_constants/separation = 6

[node name="MinSpawn" type="LineEdit" parent="Root/ScrollInspector/Inspector/SpawnerBox/SpawnerCountsRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "Min"

[node name="MaxSpawn" type="LineEdit" parent="Root/ScrollInspector/Inspector/SpawnerBox/SpawnerCountsRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "Max"

[node name="CooldownRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector/SpawnerBox"]

[node name="CooldownLabel" type="Label" parent="Root/ScrollInspector/Inspector/SpawnerBox/CooldownRow"]
text = "Cooldown"

[node name="Cooldown" type="LineEdit" parent="Root/ScrollInspector/Inspector/SpawnerBox/CooldownRow"]
custom_minimum_size = Vector2(100, 0)

[node name="ActiveRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector/SpawnerBox"]
theme_override_constants/separation = 6

[node name="ActiveStart" type="LineEdit" parent="Root/ScrollInspector/Inspector/SpawnerBox/ActiveRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "Start"

[node name="ActiveEnd" type="LineEdit" parent="Root/ScrollInspector/Inspector/SpawnerBox/ActiveRow"]
custom_minimum_size = Vector2(80, 0)
placeholder_text = "End"

[node name="SpawnerFlagsRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector/SpawnerBox"]
theme_override_constants/separation = 8

[node name="SpawnOnStart" type="CheckBox" parent="Root/ScrollInspector/Inspector/SpawnerBox/SpawnerFlagsRow"]
text = "Spawn on Start"

[node name="ShowInGame" type="CheckBox" parent="Root/ScrollInspector/Inspector/SpawnerBox/SpawnerFlagsRow"]
text = "Show in Game"

[node name="TeamRow" type="HBoxContainer" parent="Root/ScrollInspector/Inspector/SpawnerBox"]
theme_override_constants/separation = 6

[node name="TeamLabel" type="Label" parent="Root/ScrollInspector/Inspector/SpawnerBox/TeamRow"]
text = "Team"

[node name="Team" type="LineEdit" parent="Root/ScrollInspector/Inspector/SpawnerBox/TeamRow"]
